; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/radeon/extr_vce_v1_0.c_vce_v1_0_set_wptr.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/radeon/extr_vce_v1_0.c_vce_v1_0_set_wptr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.radeon_device = type { i32 }
%struct.radeon_ring = type { i64, i32 }

@TN_RING_TYPE_VCE1_INDEX = common dso_local global i64 0, align 8
@VCE_RB_WPTR = common dso_local global i32 0, align 4
@VCE_RB_WPTR2 = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @vce_v1_0_set_wptr(%struct.radeon_device* %0, %struct.radeon_ring* %1) #0 {
  %3 = alloca %struct.radeon_device*, align 8
  %4 = alloca %struct.radeon_ring*, align 8
  store %struct.radeon_device* %0, %struct.radeon_device** %3, align 8
  store %struct.radeon_ring* %1, %struct.radeon_ring** %4, align 8
  %5 = load %struct.radeon_ring*, %struct.radeon_ring** %4, align 8
  %6 = getelementptr inbounds %struct.radeon_ring, %struct.radeon_ring* %5, i32 0, i32 0
  %7 = load i64, i64* %6, align 8
  %8 = load i64, i64* @TN_RING_TYPE_VCE1_INDEX, align 8
  %9 = icmp eq i64 %7, %8
  br i1 %9, label %10, label %16

10:                                               ; preds = %2
  %11 = load i32, i32* @VCE_RB_WPTR, align 4
  %12 = load %struct.radeon_ring*, %struct.radeon_ring** %4, align 8
  %13 = getelementptr inbounds %struct.radeon_ring, %struct.radeon_ring* %12, i32 0, i32 1
  %14 = load i32, i32* %13, align 8
  %15 = call i32 @WREG32(i32 %11, i32 %14)
  br label %22

16:                                               ; preds = %2
  %17 = load i32, i32* @VCE_RB_WPTR2, align 4
  %18 = load %struct.radeon_ring*, %struct.radeon_ring** %4, align 8
  %19 = getelementptr inbounds %struct.radeon_ring, %struct.radeon_ring* %18, i32 0, i32 1
  %20 = load i32, i32* %19, align 8
  %21 = call i32 @WREG32(i32 %17, i32 %20)
  br label %22

22:                                               ; preds = %16, %10
  ret void
}

declare dso_local i32 @WREG32(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
